# python-project-49

./: Makefile  README.md  brain-calc-demo.cast  brain-games-demo.cast  brain-gcd-demo.cast  brain-prime-demo.cast  brain-progression-demo.cast  demo.cast  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
