[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Maria Antipova <maria_antipova562@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prompt-toolkit = "^3.0.48"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:run_game"
brain-calc = "brain_games.scripts.brain_calc:run_game"
brain-gcd = "brain_games.scripts.brain_gcd:run_game"
brain-progression = "brain_games.scripts.brain_progression:run_game"
brain-prime = "brain_games.scripts.brain_prime:run_game"
